    ADDED: splitter: pre-defined 650MB and 700MB CD-R
    ADDED: more Konfigurator Tooltips    
    ADDED: usermenu: entry to open konfigurator with the useraction-page directly
    ADDED: import/export of keyboard shortcuts
    ADDED: mouse selection modes are back! thanks to heiner for doing the work
    ADDED: virtual VFS (try virt:/somthing/)

    FIXED: Creatring dir-trees on the fly (mkdir /foo/bar/test) is working again
    FIXED: Syncbrowse is working again and is deactivated automaticly if no longer possible
    FIXED: [ 1107141 ] view throws error at editing new files on remote fs
    FIXED: [ 1110507 ] cannot open rpm package if path contains space
    FIXED: command line alters its height at opening/closing the popup panel
    FIXED: [ 1037003 ] konqueror style drag and drop
    FIXED: [ 1076865 ] the default search text is '*'
    FIXED: [ 976598 ] krusader occasionally crashes at closing the viewer
    FIXED: [ 1033319 ] Relative paths dont get auto-completed
    FIXED: [ 971831 ] space calculation failure if the file is bigger than 4 GByte
    FIXED: [ 1089450 ] synchronizer copies the date information for local files
    FIXED: [ 1109249 ] drag and drop doesn't work with international characters
    FIXED: viewer cannot open 600 files, when the owner column is enabled
    FIXED: ftp_vfs overloads the CPU at stepping into a slow server on the network
    FIXED: krusader's detection of old or incompatible versions
    FIXED: dirk's patch for better looking icons
    FIXED: cannot open FTP proxy bookmarks
    FIXED: [ 1101237 ] the reload shortcut is always set to Ctrl+R at startup
    FIXED: rename extension bug in kde 3.3
    FIXED: crash on startup due to restoring of last size and position
    FIXED: couldn't sort case sensative on some systems (see KDE bug #40131)
    FIXED: resizing of the main window produces strange effencts
    FIXED: double dragging in Krusader and Konqueror selection modes