@@ -33,6 +33,7 @@
     ADDED: mouse selection modes are back! thanks to heiner for doing the work
     ADDED: virtual VFS (try virt:/somthing/)
 
+    FIXED: [ 1064578 ] remote URL-s are saved in panel profiles
     FIXED: Creatring dir-trees on the fly (mkdir /foo/bar/test) is working again
     FIXED: Syncbrowse is working again and is deactivated automaticly if no longer possible
     FIXED: [ 1107141 ] view throws error at editing new files on remote fs
